force-app/main/default/objects/User/fields/CJTitle__c.field-meta.xml
<CustomField>
    <fullName>CJTitle__c</fullName>
    <defaultValue>&quot;MA&quot;</defaultValue>
    <label>직책</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GM</fullName>
                <label>본부장</label>
            </value>
            <value>
                <fullName>BM</fullName>
                <label>사업부장</label>
            </value>
            <value>
                <fullName>TM</fullName>
                <label>팀장</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <label>지원</label>
            </value>
            <value>
                <fullName>MA</fullName>
                <default>true</default>
                <label>MA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>