force-app/main/default/objects/User/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <label>코스트센터</label>
    <length>10</length>
    <type>Text</type>
</CustomField>