force-app/main/default/objects/User/fields/EmployeeNo__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNo__c</fullName>
    <label>Employee No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>