force-app/main/default/objects/User/fields/HeadOffice__c.field-meta.xml
<CustomField>
    <fullName>HeadOffice__c</fullName>
    <label>HeadOffice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3000</fullName>
                <label>FS본부</label>
            </value>
            <value>
                <fullName>3001</fullName>
                <label>급식SU</label>
            </value>
            <value>
                <fullName>6000</fullName>
                <label>외식SU</label>
            </value>
            <value>
                <fullName>6001</fullName>
                <label>영업본부직속</label>
            </value>
            <value>
                <fullName>6002</fullName>
                <label>유통SU</label>
            </value>
            <value>
                <fullName>영업전략사업부</fullName>
            </value>
            <value>
                <fullName>Z000</fullName>
                <isActive>false</isActive>
                <label>기타</label>
            </value>
            <value>
                <fullName>1000</fullName>
                <isActive>false</isActive>
                <label>미래성장사업본부</label>
            </value>
            <value>
                <fullName>4000</fullName>
                <isActive>false</isActive>
                <label>상품·마케팅본부</label>
            </value>
            <value>
                <fullName>2000</fullName>
                <isActive>false</isActive>
                <label>유통사업총괄(영업)</label>
            </value>
            <value>
                <fullName>7000</fullName>
                <isActive>false</isActive>
                <label>축육혁신TF</label>
            </value>
            <value>
                <fullName>5000</fullName>
                <isActive>false</isActive>
                <label>해외유통</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>