force-app/main/default/objects/User/fields/HeadOfficeLabel__c.field-meta.xml
<CustomField>
    <fullName>HeadOfficeLabel__c</fullName>
    <label>HeadOfficeLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>