force-app/main/default/objects/User/fields/IsExtraServiceInstructor__c.field-meta.xml
<CustomField>
    <fullName>IsExtraServiceInstructor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>부가서비스 강사&amp;셰프</label>
    <type>Checkbox</type>
</CustomField>