force-app/main/default/objects/User/fields/NewPass__c.field-meta.xml
<CustomField>
    <fullName>NewPass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewPass</label>
    <type>Checkbox</type>
</CustomField>