force-app/main/default/objects/User/fields/oil_type_cd__c.field-meta.xml
<CustomField>
    <fullName>oil_type_cd__c</fullName>
    <label>oil type cd</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>휘발유</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>경유</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>LPG</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>전기차</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>수소차</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>