force-app/main/default/objects/User/fields/SU__c.field-meta.xml
<CustomField>
    <fullName>SU__c</fullName>
    <label>SU</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HeadOffice__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4716</fullName>
                <label>급식SU직속</label>
            </value>
            <value>
                <fullName>4100</fullName>
                <label>아이누리사업부</label>
            </value>
            <value>
                <fullName>4700</fullName>
                <label>급식솔루션사업부</label>
            </value>
            <value>
                <fullName>4705</fullName>
                <label>헬씨누리사업부</label>
            </value>
            <value>
                <fullName>4709</fullName>
                <label>튼튼스쿨사업부</label>
            </value>
            <value>
                <fullName>4710</fullName>
                <label>외식SU직속</label>
            </value>
            <value>
                <fullName>3900</fullName>
                <label>외식남부사업부</label>
            </value>
            <value>
                <fullName>4400</fullName>
                <label>외식중부사업부</label>
            </value>
            <value>
                <fullName>4712</fullName>
                <label>영업본부직속</label>
            </value>
            <value>
                <fullName>4600</fullName>
                <label>원료솔루션사업부</label>
            </value>
            <value>
                <fullName>4714</fullName>
                <label>유통SU직속</label>
            </value>
            <value>
                <fullName>4701</fullName>
                <label>유통중부사업부</label>
            </value>
            <value>
                <fullName>4706</fullName>
                <label>유통남부사업부</label>
            </value>
            <value>
                <fullName>2200</fullName>
                <label>FS전략사업부</label>
            </value>
            <value>
                <fullName>3100</fullName>
                <label>FS개발사업부</label>
            </value>
            <value>
                <fullName>CSC팀</fullName>
            </value>
            <value>
                <fullName>4702</fullName>
                <label>디지털사업부</label>
            </value>
            <value>
                <fullName>3601</fullName>
                <isActive>false</isActive>
                <label>FO미트사업부</label>
            </value>
            <value>
                <fullName>2900</fullName>
                <isActive>false</isActive>
                <label>FS경원사업부</label>
            </value>
            <value>
                <fullName>2203</fullName>
                <isActive>false</isActive>
                <label>FS급식경원사업부</label>
            </value>
            <value>
                <fullName>1901</fullName>
                <isActive>false</isActive>
                <label>FS급식동부사업부</label>
            </value>
            <value>
                <fullName>2001</fullName>
                <isActive>false</isActive>
                <label>FS급식서부사업부</label>
            </value>
            <value>
                <fullName>2201</fullName>
                <isActive>false</isActive>
                <label>FS급식서울사업부</label>
            </value>
            <value>
                <fullName>2204</fullName>
                <isActive>false</isActive>
                <label>FS급식직거래(조정)</label>
            </value>
            <value>
                <fullName>2202</fullName>
                <isActive>false</isActive>
                <label>FS급식직거래지원</label>
            </value>
            <value>
                <fullName>1900</fullName>
                <isActive>false</isActive>
                <label>FS남부운영그룹</label>
            </value>
            <value>
                <fullName>2100</fullName>
                <isActive>false</isActive>
                <label>FS레저운영그룹</label>
            </value>
            <value>
                <fullName>2700</fullName>
                <isActive>false</isActive>
                <label>FS병원운영그룹</label>
            </value>
            <value>
                <fullName>2000</fullName>
                <isActive>false</isActive>
                <label>FS서부사업부</label>
            </value>
            <value>
                <fullName>1800</fullName>
                <isActive>false</isActive>
                <label>FS중부운영1그룹</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>