force-app/main/default/objects/User/fields/SULabel__c.field-meta.xml
<CustomField>
    <fullName>SULabel__c</fullName>
    <label>SULabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>