force-app/main/default/objects/User/fields/TableauID__c.field-meta.xml
<CustomField>
    <fullName>TableauID__c</fullName>
    <label>TableauID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>