force-app/main/default/objects/User/fields/TeamLabel__c.field-meta.xml
<CustomField>
    <fullName>TeamLabel__c</fullName>
    <label>TeamLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>