force-app/main/default/objects/User/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>사용자 인터페이스용 ID</description>
    <externalId>true</externalId>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>