force-app/main/default/objects/User/listViews/RolebasedAssignment.listView-meta.xml
<ListView>
    <fullName>RolebasedAssignment</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>유통중부)유지영업팀</value>
    </filters>
    <label>유지영업Role</label>
</ListView>